--- a/index.html
+++ b/index.html
@@ -4,23 +4,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Marioclub</title>  
+    <link rel="stylesheet" href="style.css" />
+    <title>For Tyr</title>  
   </head>
   <body>
 
     <header>
-      <h1>Marioclub</h1>
+      <h1>Tyr</h1>
     </header>
     <section class="banner">
-    <img src="img/peachj.png" alt="Mario club welcome banner">
-    <div class="welcome"> 
-      <h2> Welcome to <br><span>Marioclub</span> </h2>
-    </div>
+    <img src="img/peachj.png" alt="For Tyr welcome banner">
+   
     </section>
     <nav class="main-nav">
       <ul>
-        <li><a href="/join.html" class="join">Join the club</a></li>
+        <li><a href="/join.html" class="join">Give me attention</a></li>
         <li><a href="/news.html">Latest News</li>
         <li><a href="/games.html">New Games</a></li>
         <li><a href="/contact.html">Contact</a></li>
@@ -29,7 +27,7 @@
     <main>
       <article>
         <h2> It's a me, Peach! </h2>
-        <p>While Mario and Luigi are celebrated for their courage, my role as the ruler of the Mushroom Kingdom requires a different kind of strength—one that balances diplomacy with action. I don't just jump over obstacles; I defy them with grace, using my ability to float to see the path ahead and ensure every move is calculated. Whether I’m mastering new transformations at the Sparkle Theater or leading my people through a crisis, I prove that kindness and elegance are not weaknesses, but the very foundation of true power. I am not a prize to be won, but a leader who has saved the heroes just as often as they have saved me, all while maintaining the poise and heart that keeps our world whole.</p>
+        <p>blah blah tyr </p>
       </article>
       <ul class="images">
         <li><img src="img/peach and daisy.jpg" alt="mario thumb 1"></li>
