--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <div id="question-container" class="hide">
             <div id="question">Question</div>
+                        <div id="result" class="hide"></div>
             <div id="answer-buttons" class="btn-grid">
               <button class="btn">Answer 1</button>
               <button class="btn">Answer 2</button>
